<resources>
    <string name="app_name">IntroductionApp</string>
    <string name="title_activity_b">ActivityB</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_c">ActivityC</string>
    <string name="activity_a">Activity A</string>
    <string name="activity_b">Activity B</string>
    <string name="activity_c">Activity C</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="activity_result">Activity Result</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_here_text">Don\'t have an account? Register here</string>
    <string name="login">Login</string>
</resources>