<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mid_padding"
        android:autofillHints="@string/prompt_username"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/username_icon"
        android:drawablePadding="@dimen/small_padding"
        android:drawableTint="@color/mild_blue"
        android:fontFamily="@font/caviar_dreams"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:padding="@dimen/small_padding"
        android:selectAllOnFocus="true"
        android:textColor="@color/deep_blue"
        android:textColorHint="@color/deep_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mid_padding"
        android:layout_marginTop="152dp"
        android:height="@dimen/mid_padding"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawablePadding="@dimen/small_padding"
        android:drawableTint="@color/mild_blue"
        android:fontFamily="@font/caviar_dreams"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="@dimen/small_padding"
        android:selectAllOnFocus="true"
        android:textColor="@color/deep_blue"
        android:textColorHint="@color/deep_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="@dimen/mid_padding"
        android:layout_marginTop="@dimen/mid_padding"
        android:layout_marginBottom="@dimen/large_padding"
        android:backgroundTint="@color/deep_blue"
        android:enabled="true"
        android:fontFamily="@font/caviar_dreams"
        android:text="@string/action_sign_in"
        android:textColor="@color/inactive_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.269" />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mid_padding"
        android:text="@string/register_here_text"
        android:textColor="@color/deep_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.518" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mid_padding"
        android:layout_marginBottom="136dp"
        android:padding="@dimen/mid_padding"
        android:text="@string/login"
        android:textColor="@color/deep_blue"
        android:textSize="@dimen/large_padding"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>